# ollama-turbo-cli

./: .env.example  .env.permissive  .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.py  test_tool_calling.py  test_tools.py
My ai agent/: .env.restricted  (+1 more)
My-ai-agent/agent-desk-pro/src-tauri/: Cargo.toml  tauri.conf.json
My-ai-agent/agent-desk-pro/src-tauri/src/: main.rs
My-ai-agent/ollama-turbo-cli/: .gitignore  CONFIG_REFERENCE.md  CUTOVER.md  LICENSE  MONOLITH_research_pipeline.txt  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
My-ai-agent/ollama-turbo-cli/docs/: architecture.md  architecture.mmd  web_query_config.md
My-ai-agent/ollama-turbo-cli/runs/: audit.jsonl
My-ai-agent/ollama-turbo-cli/scripts/: gen_config_reference.py  net_check.py  pack_research_pipeline.py  smoke_ddg.py
My-ai-agent/ollama-turbo-cli/src/: __init__.py  cli.py  client.py  config.py  contracts.py  harmony_processor.py  plugin_loader.py  prompt_manager.py  tool_executor.py  tools.py  types.py
My-ai-agent/ollama-turbo-cli/src/api/: app.py  models.py  router_v1.py
My-ai-agent/ollama-turbo-cli/src/client_orchestrator/: __init__.py  client.py
My-ai-agent/ollama-turbo-cli/src/config/: local.example.yaml  mode.yaml  reliability.yaml  secrets.example.yaml
My-ai-agent/ollama-turbo-cli/tests/: conftest.py  test_adapter_mem0_merge_contract.py  test_allowlist_tiered_loader.py  test_audit_log.py  test_canonicalization.py  test_canonicalize_property.py  test_citations_required.py  test_claim_extraction.py  test_content_fingerprint.py  test_corroboration_debug.py  test_counter_claim_debug.py  test_debug_schema_stability.py  test_deprecation_counters.py  test_determinism.py  test_dual_validators_smoke.py  test_ef_hygiene.py  test_evidence_first_flags.py  test_extraction_coverage.py  test_golden_qa.py  test_ledger_privacy_rotation.py  test_ledger_retention_cleanup.py  test_mem0_injection.py  test_mem0_local.py  test_mem0_rerank_proxy.py  test_metrics_snapshot.py  test_mode_context.py  test_mode_switch.py  test_multi_cite_policy.py  test_news_recency_policy.py  test_news_recency_soft_accept.py  test_overlap_cite_parsing.py  test_overlap_guard.py  test_phase0_visibility.py  test_protocol_conformance.py  test_protocol_deepseek.py  test_protocol_harmony.py  test_query_profile.py  test_query_utils_skeleton.py  test_reliability_additions.py  test_reliability_stream_summary.py  (+22 more)
My-ai-agent/ollama-turbo-cli/tools/: hello.py
(+318 files in other folders)
