[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-turbo-cli"
version = "0.1.0"
description = "Ollama Turbo CLI: agentic research + tools with modern UX"
readme = "README.md"
authors = [{ name = "Windsurf", email = "support@windsurf.ai" }]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["AI", "CLI", "LLM", "research", "tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Braden-sui/ollama-turbo-cli"
Issues = "https://github.com/Braden-sui/ollama-turbo-cli/issues"

[project.scripts]
ollama-turbo = "src.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
