[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-turbo-cli"
version = "0.1.0"
description = "Ollama Turbo CLI: agentic research + tools with modern UX"
readme = "README.md"
authors = [{ name = "Braden", email = "braden.yig@gmail.com" }]
license = { text = "Apache 2.0" }
requires-python = ">=3.9"
keywords = ["AI", "CLI", "LLM", "research", "tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache 2.0 License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Braden-sui/ollama-turbo-cli"
Issues = "https://github.com/Braden-sui/ollama-turbo-cli/issues"

[project.scripts]
ollama-turbo = "src.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
