[package]
name = "agent-desk-pro"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Tauri v2 core
tauri = { version = "2.0.0", features = [] }
# Windows Credential Manager bindings
windows = { version = "0.54.0", features = [
  "Win32_Security_Credentials",
  "Win32_Foundation",
] }
keyring = "2.3.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
